tests/test0148.exp
Parse error, unexpected { ( tests/test0148.ctr: 3 )
Expected a dot (.).
